[package]
name = "dynamic-bonding-curve-sdk"
version = "0.1.0"
edition = "2021"
description = "dynamic bonding curve sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_bonding_curve_sdk"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dynamic-bonding-curve = { workspace = true }
ruint = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }
