[package]
name = "dynamic-bonding-curve"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
local = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true, features = [] }
const-crypto = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics"] }
static_assertions = { workspace = true }
ruint = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
num = { workspace = true }
solana-instruction = { workspace = true }
solana-instructions-sysvar = { workspace = true }
dynamic-amm = { workspace = true }
damm-v2 = { workspace = true }
locker = { workspace = true }
protocol-zap = { workspace = true }
mpl-token-metadata = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
